# roboskel_git

./: README.md
cord_pub/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml
cord_pub/msg/: Coords.msg~
cord_pub/msg_gen/cpp/include/cord_pub/: Coords.h
cord_pub/msg_gen/lisp/: Coords.lisp  _package.lisp  _package_Coords.lisp  cord_pub-msg.asd
cord_pub/src/: cord_pub.cpp  cord_pub.cpp~
cord_pub/src/cord_pub/msg/: _Coords.py  __init__.py
face_rec/: CMakeLists.txt  mainpage.dox  manifest.xml
face_rec/msg/: faceData.msg  faceDataArray.msg
face_rec/msg_gen/cpp/include/face_rec/: faceData.h  faceDataArray.h
face_rec/msg_gen/lisp/: _package.lisp  _package_faceData.lisp  _package_faceDataArray.lisp  faceData.lisp  faceDataArray.lisp  face_rec-msg.asd
face_rec/src/: cap_img.cpp  face_detection_and_tracking  face_rec.cpp  face_rec2.cpp  face_rec_2.cpp
face_rec/src/face_rec/msg/: __init__.py  _faceData.py  _faceDataArray.py
gamepad_control/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml
gamepad_control/src/: gamepad.cpp  gamepad_listener.cpp  gpsim.cpp
recorder/: CMakeLists.txt  depth_1374667073677.dep.npy  depth_1374667073807.dep.npy  depth_1374667073936.dep.npy  depth_1374667074072.dep.npy  depth_1374667074204.dep.npy  depth_1374667074304.dep.npy  depth_1374667074404.dep.npy  depth_1374667074536.dep.npy  depth_1374667074636.dep.npy  depth_1374667074772.dep.npy  depth_1374667074872.dep.npy  depth_1374667074974.dep.npy  depth_1374667075113.dep.npy  depth_1374667075247.dep.npy  depth_1374667075352.dep.npy  depth_1374667075483.dep.npy  depth_1374667075604.dep.npy  depth_1374667075740.dep.npy  depth_1374667075840.dep.npy  depth_1374667075972.dep.npy  depth_1374667076104.dep.npy  depth_1374667076240.dep.npy  depth_1374667076340.dep.npy  depth_1374667076472.dep.npy  depth_1374667076608.dep.npy  depth_1374667076708.dep.npy  depth_1374667076808.dep.npy  depth_1374667076942.dep.npy  depth_1374667077047.dep.npy  depth_1374667077172.dep.npy  depth_1374667077272.dep.npy  depth_1374667077374.dep.npy  depth_1374667077476.dep.npy  depth_1374667077576.dep.npy  depth_1374667077708.dep.npy  depth_1374667077808.dep.npy  depth_1374667077940.dep.npy  depth_1374667078040.dep.npy  depth_1374667078176.dep.npy  (+407 more)
recorder/launch/: audio.launch  full.launch  gp.launch  hok.launch  no_skel.launch  rec.launch  skel.launch
recorder/src/: gp2.cpp  gp_2.cpp  listener.py  rec.cpp  rec2.cpp  rec3.cpp  record_hok.cpp  record_hok.cpp~  record_skel.cpp  recorder.cpp  tf_test.cpp
rn_face/: CMakeLists.txt  README.txt  README.txt~  listener_s.py  mainpage.dox  manifest.xml
rn_face/launch/: live2.launch  rec2.launch  rec_launch.launch
rn_face/msg/: hcm.msg  hcma.msg  head_cords_m.msg  head_cords_m_array.msg
rn_face/msg_gen/cpp/include/rn_face/: hcm.h  hcma.h  head_cords_m.h  head_cords_m_array.h
rn_face/msg_gen/lisp/: _package.lisp  _package_hcma.lisp  _package_head_cords_m.lisp  hcm.lisp  hcma.lisp  head_cords_m.lisp  head_cords_m_array.lisp  rn_face-msg.asd
rn_face/scripts/: start
rn_face/src/: _skel.data  cap_img.cpp  cap_img_d.cpp  controller.cpp  face_detection_and_tracking_2_images_access  fdati.cpp  fdati2.cpp  fdati3.cpp  fdati_crop.cpp  fdc2.cpp  move_script.cpp  read_sticks.cpp  record_hok.cpp  sticks.data  test_addr_trans.cpp  test_transmitter.cpp  trans_skel.cpp  updated.cpp
rn_face/src/haarcascades/: ._haarcascade_eye.xml
rn_face/src/rn_face/msg/: __init__.py  _hcm.py  _hcma.py  _head_cords_m.py  _head_cords_m_array.py
sdc2130/: .cproject  .project  CMakeLists.txt  mainpage.dox  manifest.xml
sdc2130/.svn/: all-wcprops  entries
sdc2130/.svn/text-base/: .cproject.svn-base  .project.svn-base  .pydevproject.svn-base  CMakeLists.txt.svn-base  cmake_install.cmake.svn-base  manifest.xml.svn-base
sdc2130/include/.svn/: all-wcprops  entries
sdc2130/launch/: gremote.launch
sdc2130/msg/: teleop_skel.msg
sdc2130/msg/.svn/: entries
sdc2130/msg_gen/.svn/: entries
sdc2130/msg_gen/cpp/.svn/: entries
sdc2130/msg_gen/cpp/include/.svn/: entries
sdc2130/msg_gen/cpp/include/sdc2130_skel/: teleop_skel.h
sdc2130/msg_gen/cpp/include/sdc2130_skel/.svn/: entries
sdc2130/msg_gen/lisp/: _package.lisp  _package_teleop_skel.lisp  sdc2130_skel-msg.asd  teleop_skel.lisp
sdc2130/msg_gen/lisp/.svn/: entries
sdc2130/src/: gameskel.cpp
sdc2130/src/.svn/: all-wcprops  entries
sdc2130/src/.svn/text-base/: main.cpp.svn-base
sdc2130/src/sdc2130_skel/msg/: __init__.py
simpub3/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  manifest.xml~
simpub3/launch/: head_tracker.launch  tracker2.launch
simpub3/msg/: mast_position.msg
simpub3/src/: simpub3.cpp  simpub3.cpp~
